--- a/Web DS1.ipynb
+++ b/Web DS1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ngrok tunnel 'https://55c6-39-45-15-21.ngrok-free.app' -> 'http://localhost:5001'\n",
+      "Ngrok tunnel 'https://08ab-39-45-22-161.ngrok-free.app' -> 'http://localhost:5001'\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
@@ -182,7 +182,45 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5001\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [23/May/2025 23:37:55] \"GET / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [26/May/2025 20:11:53] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:12:18] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:12:19] \"POST /upload_model HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:12:20] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:12:27] \"POST /upload_model HTTP/1.1\" 302 -\n",
+      "127.0.0.1 - - [26/May/2025 20:12:27] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:12:28] \"GET /?selected_model=gradient_boosting.pkl HTTP/1.1\" 200 -\n",
+      "c:\\Users\\Muzam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but GradientBoostingClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "127.0.0.1 - - [26/May/2025 20:13:00] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:13:03] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:13:10] \"POST /upload_model HTTP/1.1\" 302 -\n",
+      "127.0.0.1 - - [26/May/2025 20:13:10] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:13:12] \"GET /?selected_model=decision_tree.pkl HTTP/1.1\" 200 -\n",
+      "c:\\Users\\Muzam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "127.0.0.1 - - [26/May/2025 20:13:30] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:13:33] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:13:43] \"POST /upload_model HTTP/1.1\" 302 -\n",
+      "127.0.0.1 - - [26/May/2025 20:13:43] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:13:46] \"GET /?selected_model=logistic_regression.pkl HTTP/1.1\" 200 -\n",
+      "c:\\Users\\Muzam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "127.0.0.1 - - [26/May/2025 20:14:02] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:14:03] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:14:19] \"POST /upload_model HTTP/1.1\" 302 -\n",
+      "127.0.0.1 - - [26/May/2025 20:14:19] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:14:21] \"GET /?selected_model=svc.pkl HTTP/1.1\" 200 -\n",
+      "c:\\Users\\Muzam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "127.0.0.1 - - [26/May/2025 20:14:35] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:14:36] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:14:46] \"POST /upload_model HTTP/1.1\" 302 -\n",
+      "127.0.0.1 - - [26/May/2025 20:14:46] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:14:47] \"GET /?selected_model=adaboost.pkl HTTP/1.1\" 200 -\n",
+      "c:\\Users\\Muzam\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but AdaBoostClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "127.0.0.1 - - [26/May/2025 20:15:01] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [26/May/2025 20:15:02] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
